# vxparser

./: .gitignore  README.md  api.py  buildozer.spec  main.py  pyproject.toml  requirements.txt  services.py
applib/: __init__.py  android.py  builder.py  config.bakk  config.json  focus.py  highlight.py  input.py  main.json  main.py
components/: __init__.py
components/button/: button.kv  button.py
components/card/: card.kv  card.py
components/checkbox/: checkbox.kv  checkbox.py
components/chip/: chip.kv  chip.py
components/gridlayout/: grid_layout.kv  grid_layout.py
components/header/: header.kv  header.py
components/list/: list.kv  list.py  list_item.kv  list_item.py
components/magicmenu/: _magic_menu.kv  _magic_menu.py  magic_menu.kv  magic_menu.py
components/scrollview/: scroll_view.kv  scroll_view.py
components/segmentedbutton/: segmented_item.kv  segmented_item.py
components/smartbox/: smart_box.kv  smart_box.py
components/smarttile/: smart_tile.kv  smart_tile.py
components/spinner/: spinner.kv  spinner.py
components/switch/: switch.kv  switch.py
components/test/: test.kv  test.py
components/textfield/: text_field.kv  text_field.py
helper/epg/: service.py
helper/sites/: cinemathek.py  filmpalast.py  megakino.py  streamen.py  streampalace.py
screens/: __init__.py
screens/view/: _bakk.kv
tizen/: common.py  vplayer.css  vplayer.html  vplayer.json  vplayer.py
utils/: common.py  data.py  vavoo.py  xstream.py
vplayer/: __main__.py
vxparser/: api.py  cli.py  main.py  proxy.py  services.py
vxparser/helper/: proxy.py
(+32 files in other folders)
