[tool.poetry]
name = "vplayer"
version = "0.0.1"
description = "Vavoo Tizen whl."
authors = ["Mastaaa <sebastianspaaa@gmail.com>"]
readme = "README.md"
packages = [{include = "vplayer"}]

[tool.poetry.dependencies]
python = ">=3.8"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

